--- a/package.json
+++ b/package.json
@@ -3,7 +3,69 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "angular": "1.6.9",
-    "@uirouter/angularjs": "1.0.15"
+    "@angular/common": "8.2.13",
+    "@angular/compiler": "8.2.13",
+    "@angular/core": "8.2.13",
+    "@angular/platform-browser": "8.2.13",
+    "@angular/platform-browser-dynamic": "8.2.13",
+    "@angular/router": "8.2.13",
+    "@angular/upgrade": "8.2.13",
+    "@babel/runtime-corejs3": "7.6.0",
+    "@microsoft/microsoft-graph-client": "1.5.2",
+    "@uirouter/angular-hybrid": "9.0.0",
+    "TagManager": "https://github.com/max-favilli/tagmanager#d4913d24684b7809351532d884795bb60aeb3683",
+    "algebra.js": "0.2.6",
+    "angular": "1.7.5",
+    "angular-animate": "1.7.5",
+    "angular-autodisable": "https://github.com/stnor/angular-autodisable#c8f451f",
+    "angular-bootstrap-show-errors": "2.3.0",
+    "angular-confirm-modal": "https://github.com/stnor/angular-confirm-modal#396aaa6dd09db9f16151e6eb21419babbd501db8",
+    "angular-cookies": "1.7.5",
+    "angular-drag-and-drop-lists": "2.1.0",
+    "angular-loading-bar": "0.9.0",
+    "angular-local-storage": "0.2.7",
+    "angular-messages": "1.7.5",
+    "angular-modal-service": "https://github.com/dwmkerr/angular-modal-service.git#2c06059e53009e7dd1a3aa0f9e5f20833ae6a76b",
+    "angular-sanitize": "1.7.5",
+    "angular-translate": "2.18.1",
+    "angular-translate-interpolation-messageformat": "2.18.1",
+    "angular-ui-bootstrap": "2.5.0",
+    "angular-ui-switch": "0.1.1",
+    "angular-update-meta": "2.0.1",
+    "angularjs-slider": "6.6.1",
+    "ascii2mathml": "0.6.2",
+    "autofill-event": "0.0.1",
+    "bootstrap-datetime-picker": "https://github.com/stnor/bootstrap-datetimepicker",
+    "console-polyfill": "0.2.3",
+    "core-js": "3",
+    "d3": "5.9.2",
+    "dom4": "2.1.5",
+    "fastclick": "1.0.6",
+    "imports-loader": "0.7.1",
+    "jquery": "3.4.1",
+    "lodash": "4.17.11",
+    "mathjax3": "3.0.0-beta.2",
+    "messageformat": "0.3.1",
+    "mobile-drag-drop": "2.3.0-rc.0",
+    "moment": "2.20.1",
+    "moment-duration-format": "2.1.1",
+    "msal": "0.2.4",
+    "ng-infinite-scroll": "1.3.0",
+    "ng-table": "3.0.1",
+    "ng-tags-input": "3.1.1",
+    "oclazyload": "1.1.0",
+    "rxjs": "6.5.3",
+    "selectize": "0.12.6",
+    "snapsvg": "https://github.com/adobe-webplatform/Snap.svg#d8f7508872b6e9c0059e1f714514244d08acdb7b",
+    "sockjs-client": "1.1.4",
+    "stompjs": "2.3.3",
+    "stringify": "5.2.0",
+    "typescript": "3.6.4",
+    "ui-select": "0.19.8",
+    "underscore": "1.8.3",
+    "upng-js": "2.1.0",
+    "uuid": "3.0.1",
+    "whatwg-fetch": "3.0.0",
+    "zone.js": "0.9.1"
   }
 }
